Fix alignment issues with discussion page

--- a/app/discussion/[id]/DiscussionId.module.css
+++ b/app/discussion/[id]/DiscussionId.module.css
@@ -64,10 +64,11 @@
 
 .discussion_page__posts {
   /* align */
-  display: grid;
-  grid-template-columns: 22% 22% 22% 22%;
-  /* grid-template-rows: auto; */
-  grid-gap: 2.5rem;
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
   /* margin-top: 20px;
   margin-bottom: 20px; */
   /* content */
@@ -75,8 +76,8 @@
   /* display: flex; */
   /* flex-direction: column-reverse; */
   /* gap: 3rem; */
-  margin-left: 3rem;
-  margin-right: 3rem;
+  /* margin-left: 3rem;
+  margin-right: 3rem; */
 }
 
 .discussion_page__attachments {
