--- a/styles/globals.css
+++ b/styles/globals.css
@@ -289,6 +289,8 @@ h3 {
 }
 
 .post {
+  /* align */
+  width: 400px;
   /* style */
   background: white;
   border-radius: 0.5rem;
@@ -296,7 +298,6 @@ h3 {
   padding: 0.8rem;
   display: flex;
   gap: 0.8rem;
-  width:100%;
 
 }
 
@@ -340,6 +341,6 @@ h3 {
   padding: 0.3rem;
 }
 
-.post__fileviewer{
+.post__fileviewer {
   width: 90%;
 }
